Fixed text wrapping issues, added comments

--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -1,10 +1,9 @@
 .container {
-    min-height: 100vh;
     display: flex;
 }
 
 .container section {
-    width: 80%;
+    width: 60%;
     margin-right: 1rem;
 }
 
@@ -12,12 +11,10 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    width: 20%;
+    width: 40%;
     min-width: 250px;
-    text-align: center;
-    position: sticky;
     top: 80px;
-    height: 0;
+    text-align: center;
     min-height: 300px;
 }
 
@@ -34,4 +31,8 @@
         width: 100%;
         position: relative;
     }
+}
+
+.commentSection {
+    background: red;
 }
