--- a/styles/globals.css
+++ b/styles/globals.css
@@ -271,3 +271,7 @@ input[type='file'] {
 .hidden {
     display: none;
 }
+
+.wrap {
+    word-wrap: break-word;
+}
